# rdl_mcp_extend

./: .gitignore  CLAUDE.md  LICENSE.upstream  PROGRESS.md  README.md  pyproject.toml  rdl_report_mcp_server.py
docs/: TEMPLATES.md
rdl_report_mcp/: __init__.py  columns.py  datasets.py  parameters.py  reader.py  report_builder.py  server.py  templates_lib.py  validation.py  xml_utils.py
rdl_report_mcp/templates/: report_skeleton_sql.rdl
tests/: __init__.py  test_dax_and_dataset.py  test_report_builder.py  test_templates_lib.py
